--- a/NeighborhoodSearch.vcxproj
+++ b/NeighborhoodSearch.vcxproj
@@ -155,6 +155,9 @@
     <ClInclude Include="spatialHashing.h" />
     <ClInclude Include="zIndexSort.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="maze.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
