--- a/NeighborhoodSearch.vcxproj.filters
+++ b/NeighborhoodSearch.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="helperFunctions.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="cellLinkedList.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="fluidSolver.h">
@@ -69,6 +72,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="helperFunctions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="cellLinkedList.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
